2006-06-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JLabel.java
	(setDisplayedMnemonic): Updated API docs,
	(getDisplayedMnemonic): Removed unnecessary type-cast,
	(setDisplayedMnemonicIndex): Removed unnecessary validation, 
	(getDisplayedMnemonicIndex): Updated API docs.

2006-06-21  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/DefaultListSelectionModel.java
	(getSelectionMode): Updated API docs,
	(setAnchorSelectionIndex): Added ListSelectionEvent generation,
	(addSelectionInterval): If mode is SINGLE_SELECTION, just call 
	setSelectionInterval(),
	(setSelectionInterval): Reimplemented SINGLE_SELECTION and 
	SINGLE_INTERVAL_SELECTION cases.

2006-06-21  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/AbstractDocument.java
	(BranchElement.numChildren): New field.
	(BranchElement.BranchElement): Initialize children array with
	one element (that's the least number of elements that makes sense).
	Initialize numChildren.
	(BranchElement.children): Use numChildren as boundary.
	(BranchElement.getElement): Use numChildren as boundary.
	(BranchElement.getElementCount): Use numChildren as boundary.
	(BranchElement.getElementIndex): Use numChildren as boundary.
	(BranchElement.getEndOffset): Use numChildren as boundary.
	(BranchElement.getStartOffset): Use numChildren as boundary.
	(BranchElement.positionToElement): Use numChildren as boundary.
	(BranchElement.replace): Handle the children array more efficiently
	by growing in blocks > 1, and reusing space from removed elements.
	(LeafElement.startDelta): Removed.
	(LeafElement.endDelta): Removed.
	(LeafElement.LeafElement): Removed handling of deltas.
	(LeafElement.getEndOffset): Likewise.
	(LeafElement.getStartOffset): Likewise.
	* javax/swing/text/JTextComponent.java
	(setDocument): Added locking of the old document to avoid dangling
	notification beeing delivered while the document is beeing
	disconnected.
	(getScrollableTracksViewportWidth): Fixed condition.